HAP-904 fix dropdown menu clipping

--- a/softWrench.sW4.Web/Content/styles/hapag/application/forms.css
+++ b/softWrench.sW4.Web/Content/styles/hapag/application/forms.css
@@ -4,7 +4,7 @@
  ******************************************************************************
  ******************************************************************************/
 [data-application="servicerequest"] .col-xs-2 {
-    width: 25%;
+    width: 24%;
 }
 
 [data-application="servicerequest"] .col-xs-10 {
